pie chart legend overflow in mobile device fixed

--- a/src/pages/Home/ChartPie.css
+++ b/src/pages/Home/ChartPie.css
@@ -1,4 +1,30 @@
-.recharts-legend-item-text{
+/* .recharts-legend-item-text{
     padding-right: 30px;
     
-}
+} */
+
+
+
+@media only screen and (max-width: 600px) {
+   /* li.recharts-legend-item {
+       padding: 0;
+       margin: 0;
+    } ;
+    .recharts-legend-wrapper{
+        width: 360px;
+        } */
+   /* .recharts-default-legend{
+        padding: 4px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }  */
+    .recharts-default-legend {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        justify-content: center;
+        align-items: center;
+        } 
+  } 
